--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,6 +1,71 @@
+{% extends "base.html" %}
+{% load static %}
+
+{% block modal_cart %}
+    {% include 'includes/cart_button.html' %}
+{% endblock %}
+
+{% block content %}
+<style>
+    /* Стилі для карт товарів на головній сторінці */
+    .main-page .card {
+        width: 100%;
+        height: 100%;
+        max-width: 300px; /* Фіксований розмір картки */
+        margin: 0 auto; /* Центруємо картку */
+    }
 
 
+    .main-page {
+        margin-bottom: 50px;
+    }
 
+    .disc {
+        color: white;
+        margin-bottom: 30px!important;
+    }
 
+    /* Стилі для кнопки корзини на головній сторінці */
+    .main-page .add-to-cart {
+        position: absolute; /* Встановлюємо абсолютне позиціонування */
+        bottom: 10px; /* Зсуваємо від нижнього краю на 10px */
+        right: 10px; /* Зсуваємо від правого краю на 10px */
+    }
+</style>
 
-
+<div class="container-fluid main-page"> <!-- Додано клас для ідентифікації головної сторінки -->
+    <h2 class=" disc text-center mb-4 mt-4">Акційні пропозиції</h2>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        {% for product in sale_products %}
+            <div class="col mt-4">
+                <div class="card border-primary rounded my-shadow">
+                    {% if product.image %}
+                        <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                    {% else %}
+                        <img src="{% static 'path_to_placeholder_image/placeholder_image.png' %}" class="card-img-top" alt="Placeholder">
+                    {% endif %}
+                    <div class="card-body">
+                        <a href="{% url 'catalog:product' product.slug %}">
+                            <p class="card-title">{{ product.name }}</p>
+                        </a>
+                        <p class="card-text" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{{ product.description }}</p>
+                        <p class="product_id">id: {{ product.display_id }}</p>
+                        {% if product.discount %}
+                            <p class="text-decoration-line-through">{{ product.price }} грн</p>
+                            <p><strong>{{ product.sell_price }} грн</strong></p>
+                            <span class="badge bg-warning text-dark">Знижка {{ product.discount }} %</span>
+                        {% else %}
+                            <p><strong>{{ product.price }} грн</strong></p>
+                        {% endif %}
+                    </div>
+                    <!-- Кнопка корзини праворуч -->
+                    <a href="{% url 'cart:cart_add' %}" class="btn add-to-cart" data-product-id="{{ product.id }}">
+                        {% csrf_token %}
+                        <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Cart Icon" width="32" height="32">
+                    </a>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</div>
+{% endblock content %}
