--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,3 +1,76 @@
+{#{% extends "base.html" %}#}
+{#{% load static %}#}
+{##}
+{#{% block modal_cart %}#}
+{#{% include 'includes/cart_button.html' %}#}
+{#{% endblock %}#}
+{##}
+{#{% block content %}#}
+{#<div class="row">#}
+{#    <div class="container mt-5">#}
+{#        <div class="row justify-content-center">#}
+{#            <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">#}
+{#                <h2 class="text-center mb-4">Авторизація</h2>#}
+{#                <form action="{% url "users:login" %}" method="post">#}
+{#                    {% csrf_token %}#}
+{##}
+{#                    {% if form.non_field_errors %}#}
+{#                        <div class="alert alert-danger">#}
+{#                            {% for error in form.non_field_errors %}#}
+{#                                {{ error }}#}
+{#                            {% endfor %}#}
+{#                        </div>#}
+{#                    {% endif %}#}
+{##}
+{#                    <div class="mb-3">#}
+{#                        <label for="id_username" class="form-label">Електронна пошта</label>#}
+{#                        <input type="text" class="form-control"#}
+{#                        value="{% if form.username.value %}{{ form.username.value }}{% endif %}"#}
+{#                        name="username" id="id_username"#}
+{#                        placeholder="Введіть вашу електронну пошту "#}
+{#                        required>#}
+{#                        {% if form.username.errors %}#}
+{#                            <div class="alert alert-danger">#}
+{#                                {% for error in form.username.errors %}#}
+{#                                    {{ error }}#}
+{#                                {% endfor %}#}
+{#                            </div>#}
+{#                        {% endif %}#}
+{#                    </div>#}
+{#                    <div class="mb-3">#}
+{#                        <label for="id_password" class="form-label">Пароль</label>#}
+{#                        <input type="password" class="form-control" name="password" id="id_password"#}
+{#                        placeholder="Введіть ваш пароль" required>#}
+{#                    </div>#}
+{##}
+{#                    <button type="submit" class="btn btn-dark btn-block">Увійти</button>#}
+{#                </form>#}
+{#                <div class="mt-3">#}
+{#                    <a href="{% url "user:registration" %}">Створити обліковий запис</a>#}
+{#                </div>#}
+{#                <hr>#}
+{#                <div class="text-center">#}
+{#                    <p>Або авторизуйтеся через:</p>#}
+{#                    <a href="#" class="btn btn-dark">#}
+{#                        <img class="mx-1" src="{% static "deps/icons/google.svg" %}" alt="Іконка Google" width="16" height="16">#}
+{#                        Google#}
+{#                    </a>#}
+{#                    <a href="#" class="btn btn-dark">#}
+{#                        <img class="mx-1" src="{% static "deps/icons/facebook.svg" %}" alt="Іконка Facebook" width="16" height="16">#}
+{#                        Facebook#}
+{#                    </a>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
+{#{% endblock %}#}
+{##}
+{##}
+{##}
+
+
+
 {% extends "base.html" %}
 {% load static %}
 
@@ -11,8 +84,9 @@
         <div class="row justify-content-center">
             <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                 <h2 class="text-center mb-4">Авторизація</h2>
-                <form action="{% url "user:login" %}" method="post">
+                <form action="{% url "users:login" %}" method="post">
                     {% csrf_token %}
+                    <input type="hidden" name="next" value="{% url 'orders:create_order' %}">
 
                     {% if form.non_field_errors %}
                         <div class="alert alert-danger">
@@ -46,25 +120,11 @@
                     <button type="submit" class="btn btn-dark btn-block">Увійти</button>
                 </form>
                 <div class="mt-3">
-                    <a href="#">Забули пароль?</a> | <a href="{% url "user:registration" %}">Створити обліковий запис</a>
-                </div>
-                <hr>
-                <div class="text-center">
-                    <p>Або авторизуйтеся через:</p>
-                    <a href="#" class="btn btn-dark">
-                        <img class="mx-1" src="{% static "deps/icons/google.svg" %}" alt="Іконка Google" width="16" height="16">
-                        Google
-                    </a>
-                    <a href="#" class="btn btn-dark">
-                        <img class="mx-1" src="{% static "deps/icons/facebook.svg" %}" alt="Іконка Facebook" width="16" height="16">
-                        Facebook
-                    </a>
+                    <a href="{% url "user:registration" %}">Створити обліковий запис</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
 {% endblock %}
-
-
 
